# virgul

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
src/ffi/: virgul.c  virgul.h
src/virgul/: __init__.py
tests/: test_main.py
